--- a/Aula003/ex005.html
+++ b/Aula003/ex005.html
@@ -11,7 +11,7 @@
     <h1>Iniciando os estudo DOM</h1> <!-- Document Object Model-->
     <p>Aqui vai o Resultado</p>
     <p>Aprendendo a usar o DOM em JavaScript</p>
-    <h2>DOM</h2>
+    <h2 id="title">DOM</h2>
     <div id="msg">Clique em mim</div>
 
     <script>
@@ -24,6 +24,8 @@
         // --> Comando Curto com o var : d.innerText = 'Olá'
         window.document.getElementById('msg').innerText = 'Olá'
         // window.document.getElementById('msg').style.background = 'rgba(19, 55, 0, .80)'
+
+        window.document.getElementById('title').innerText = 'B3'
     </script>
 </body>
 
